# skai-ai-server

./: .env.example  .gitignore  Dockerfile  README.md  SPRING_MIGRATION_GUIDE.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: config.py  main.py  schemas.py
app/services/: embeddings.py  grading.py  keyword.py  llm.py  outline.py  sparse.py
grading/: hybrid_grader.py  keyword_matcher.py  models.py
llm/: base.py  factory.py  local_gemma.py  openrouter.py
prompts/: feedback_prompt.py  outline_prompt.py  question_prompt.py  review_prompt.py  tutor_prompt.py
scheduler/: sm2.py
schemas/: common.py  evaluation.py  outline.py  question.py  review.py  tutor.py
tests/: test_api.py  test_health.py  test_hybrid_grader.py  test_json_parser.py  test_keyword_matcher.py  test_sm2.py
utils/: json_parser.py
